hphp/test/zend/good/ext/fileinfo/tests/finfo_open_002.php
<?php

$x = new finfo;
$x->finfo();

echo "done!\n";

?>