hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_bottom_pass_array.php
<?php

$list = new SplDoublyLinkedList();
$list->push("top");
$list->bottom(array());

?>